# IAM-InlineAgentMonitor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PAPER_FINDINGS.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
agent_iam/: __init__.py  cli.py  defend.py  schema.py  tokenize.py
agent_iam/apimonitor/: __init__.py  context.py  gate.py  monitor.py  parser.py  policy.py  types.py
agent_iam/data/: atbench.py  claude_history.py  mrt.py
agent_iam/data/generate/: __init__.py  labeler.py  mockserver.py  runner.py  scenario.py  streamjson.py
agent_iam/data/generate/backends/: __init__.py  _deepseek_patch.py  base.py  claude_code.py  (+3 more)
agent_iam/detect/: incremental.py  online.py
agent_iam/eval/: __init__.py  baselines.py  bench.py  cli.py  metrics.py  report.py  runner.py  smoke.py
agent_iam/runtime/: __init__.py  stream.py
agent_iam/runtime/adapters/: __init__.py  base.py  claude_code.py  generic.py  langgraph.py
examples/: README.md  apimonitor_demo.py  generate_data.py  run_eval.py  streaming_monitor.py
notebooks/: prep_qwen35_wheels.ipynb  smoke_kaggle.ipynb  train_kaggle.ipynb  train_kaggle3.ipynb
paper/: Makefile  README.md  main.tex  references.bib
paper/sections/: abstract.tex  conclusion.tex  data.tex  experiments.tex  introduction.tex  limitations.tex  method.tex  related_work.tex
promptfoo-redteam/: promptfooconfig.yaml  redteam-4.yaml  redteam-5.yaml  redteam-6.yaml
scripts/: bench_latency.py  build_dataset.py  build_kaggle_bundle.py  build_v019.sh  generate_traces.py  inspect_atbench_fp.py  promptfoo_to_scenarios.py  pull_agent3sigma.py  pull_atbench.py  pull_history.py  pull_mrt.py  relabel.py  smoke_gpu.py  synthesize_scenarios.py  tokenize_dataset.py  upload_to_hf.py
tests/: test_apimonitor.py  test_canonical_rendering.py  test_eval_metrics.py  test_generic_adapter.py  test_guard_oneliner.py  test_incremental.py  test_stream.py
traceguard/: __init__.py  cli.py  tokenize.py
traceguard/data/: atbench.py  claude_history.py  mrt.py
traceguard/data/generate/: __init__.py  labeler.py  scenario.py  streamjson.py
traceguard/detect/: online.py
traceguard/eval/: __init__.py  baselines.py  cli.py  metrics.py  report.py
traceguard/runtime/: __init__.py  stream.py
traceguard/runtime/adapters/: __init__.py  base.py  claude_code.py  langgraph.py
(+96 files in other folders)
